tests/fsharp/typecheck/sigs/neg06_a.bsl

neg06_a.fs(5,16,5,17): typecheck error FS0434: The property 'IsD' has the same name as a method in type 'NameClashesWithDefaultAugmentation.T'.

neg06_a.fs(4,16,4,17): typecheck error FS0434: The property 'IsC' has the same name as a method in type 'NameClashesWithDefaultAugmentation.T'.

neg06_a.fs(8,23,8,26): typecheck error FS0023: The member 'IsC' cannot be defined because the name 'IsC' clashes with the default augmentation of the union case 'C' in this type or module

neg06_a.fs(13,28,13,31): typecheck error FS0023: The member 'IsD' cannot be defined because the name 'IsD' clashes with the default augmentation of the union case 'D' in this type or module
